--- a/Documents/developer/romantic-map/package.json
+++ b/Documents/developer/romantic-map/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "mapbox-gl": "^2.3.0",
+    "tailwind": "^4.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -17,9 +18,12 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
